# sqlx_bug

./: .env  Cargo.toml  test.db
migrations/: 20221126164809_init.sql
src/: main.rs
