[package]
name = "sqlx-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["rt", "macros"] }
sqlx = { git = "https://github.com/launchbadge/sqlx.git", branch = "0.7-dev", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "migrate",
] }
anyhow = "1"
dotenv = "0.15.0"
